blueprintDeployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: deployment1 
spec:
  replicas: 2 # numarul de copii
  selector:
    matchLabels:
      component: app1 # este un tag pentru a identifica deploymentul
  template:
    metadata:
      labels: # labels trebuie sa matchuiasca matchLabels
        component: app1 
    spec:
      containers:
        - name: server1 # nume container
          image: patriciu/server1 # numele unei imagini
          ports:
            - containerPort: 6969 # portul aplicatiei
