blueprintClusterIp.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip1
spec:
  type: ClusterIP
  selector:
    component: app1
  ports:
    - port: 5000 # portul pe care-l pot accesa restul de componente din cadrul nodului
      targetPort: 6969 # protul din interiorul podului
