blueprintClusterIpPostress.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cip
spec:
  type: ClusterIP
  selector:
    component: postgres1
  ports:
    - port: 5432
      targetPort: 5432
